# MATAM-HW1

./: .gitignore  CMakeLists.txt  README.md  amounnt_set_tests.c  amount_set.c  amount_set.h  amount_set_tests_custom.c  amount_set_tests_sivan.c  links.txt  main.c  main2.c  makefile  matamazom.c  matamazom.h  noa_amount_set_tests.c  noa_matamazom_tests.c  safi_matamazom.c  safi_tests_amount_set.c  test_matamazom_yonatan_and_hen.c
fromCourse/: list.h  matamazom_print.c  matamazom_print.h  set.h
fromCourse/tests/: amount_set_main.c  amount_set_tests.c  expected_filtered.txt  matamazom_main.c  matamazom_tests.c  matamazom_tests.h
safimatamazom/: order.c  printed_best_selling_safitest3.txt  printed_filtered_safitest.txt  printed_filtered_safitest3.txt  printed_filtered_safitest4.txt  printed_inventory_safi_test2.txt  printed_inventory_safi_test3.txt  printed_inventory_safi_test4.txt  printed_order_safi_test.txt  printed_order_safi_test3.txt  safi_matamazom.c
tests/: amount_set_tests.h  matamazom_tests.c  printed_best_selling.txt  printed_order.txt
yonatan_tests/: test_change_product_amount.txt  test_change_product_amount_in_order.txt  test_clear_product.txt  test_new_product.txt  test_ship.txt
